# vimwhisperer

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.js  example.py  pyproject.toml
plugin/: vimwhisperer.vim
src/vimwhisper/: constants.py  utils.py
src/vimwhisper/auth/: __init__.py
src/vimwhisper/data/amazoncodewhispererservice/2022-06-15/: service-2.json
src/vimwhisper/data/codewhisperer/2022-06-15/: service-2.json
src/vimwhisperer/: __init__.py  __main__.py  api.py  cli.py  constants.py  vim.py
src/vimwhisperer/auth/: sso_auth_manager.py
src/vimwhisperer/login/: __main__.py
